.kubernetes/traefik_middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rvtr-auth
spec:
  basicAuth:
    removeHeader: false
    secret: rvtr-auth
