.kubernetes/k8s_deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvtr-kernel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rvtr-kernel
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rvtr-kernel
    spec:
      containers:
        - env:
            - name: GF_AUTH_PROXY_AUTO_SIGN_UP
              value: 'true'
            - name: GF_AUTH_PROXY_ENABLED
              value: 'true'
            - name: GF_AUTH_PROXY_HEADER_NAME
              value: X-Forwarded-User
            - name: GF_AUTH_PROXY_HEADER_PROPERTY
              value: username
          image: grafana/grafana
          imagePullPolicy: Always
          name: grafana
          ports:
            - containerPort: 3000
              name: grafana-http
          resources:
            limits:
              cpu: '250m'
              memory: '128Mi'

        - image: prom/prometheus
          imagePullPolicy: Always
          name: prometheus
          ports:
            - containerPort: 9090
              name: prometheus-http
          resources:
            limits:
              cpu: '250m'
              memory: '128Mi'
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/

        - image: openzipkin/zipkin-slim
          imagePullPolicy: Always
          name: zipkin
          ports:
            - containerPort: 9411
              name: zipkin-http
          resources:
            limits:
              cpu: '250m'
              memory: '128Mi'

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
