.kubernetes/kubernetes_deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvtr-kernel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rvtr-kernel
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rvtr-kernel
    spec:
      containers:
        - image: grafana/grafana
          imagePullPolicy: Always
          name: grafana
          ports:
            - containerPort: 3000
              name: grafana-http

        - image: prom/prometheus
          imagePullPolicy: Always
          name: prometheus
          ports:
            - containerPort: 9090
              name: prometheus-http
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/

        - image: openzipkin/zipkin-slim
          imagePullPolicy: Always
          name: zipkin
          ports:
            - containerPort: 9411
              name: zipkin-http

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
