.kubernetes/k8s_services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: grafana
      port: 3000
      targetPort: grafana-http
  selector:
    app: rvtr-kernel
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus-http
  selector:
    app: rvtr-kernel
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  ports:
    - name: zipkin
      port: 9411
      targetPort: zipkin-http
  selector:
    app: rvtr-kernel
  type: ClusterIP
