.kubernetes/traefik_ingress_routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - analytics
  routes:
    - kind: Rule
      match: PathPrefix('/')
      middlewares:
        - name: rvtr-auth
      priority: 10
      services:
        - kind: Service
          name: grafana
          port: 3000

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - metrics
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      middlewares:
        - name: rvtr-auth
      priority: 10
      services:
        - kind: Service
          name: prometheus
          port: 9090

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zipkin
spec:
  entryPoints:
    - tracing
  routes:
    - kind: Rule
      match: PathPrefix(`/zipkin`)
      middlewares:
        - name: rvtr-auth
      priority: 10
      services:
        - kind: Service
          name: zipkin
          port: 9411

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: PathPrefix(`/api`) || PathPrefix(`/dashboard`) || PathPrefix(`/metrics`)
      middlewares:
        - name: rvtr-auth
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
